--- a/about.html
+++ b/about.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>About | Emily Ann Moschner Design</title>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" href="css/base.css"/>
-        
+         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" href="css/base.css"/>     
+        <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     </head>
     
     <body>
