Updated Favicon on every html page

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About | Emily Ann Moschner Design</title>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" href="css/base.css"/>
-        
+         <title>Contact | Emily Ann Moschner Design</title>
+         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" href="css/base.css"/>     
+        <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     </head>
     
     <body>
