Changed footer text color

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         </article>
     
         <footer>
-            <p style="color: #ffffff;">&copy; 2013 EMILY ANN MOSCHNER &lozf; DESIGN & CODE BY EMILY ANN MOSCHNER </p>
+            <p style="color: #1C5E48;">&copy; 2013 EMILY ANN MOSCHNER &lozf; DESIGN & CODE BY EMILY ANN MOSCHNER </p>
         </footer>
     
     </body>
