Completely changed css and html tag organization

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,13 @@
     <body>
         
         <header>
-            <h1><a href="contact.html">CONTACT</a></h1>
-            <h1><a href="http://emilyannmoschner.wordpress.com/">BLOG</a></h1>
-            <h1><a href="resume.html">RESUME</a></h1>
-            <h1><a href="portfolio.html">PORTFOLIO</a></h1>
-            <h1><a href="about.html">ABOUT</a></h1>
+            <nav>
+                <a href="contact.html">CONTACT</a>
+                <a href="http://emilyannmoschner.wordpress.com/">BLOG</a>
+                <a href="resume.html">RESUME</a>
+                <a href="portfolio.html">PORTFOLIO</a>
+                <a href="about.html">ABOUT</a>
+            </nav>
         </header>
         
         <nav>
