More major changes

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,10 @@
         </header>
     
         <article>
-            <img src="img/likewhatyousee_contact_eamd.png" alt="Like What You See? | Contact" title="Like What You See? | Contact"/>
+            <img src="img/likewhatyousee_contact_eamd.png" alt="Contact | Like What You See?" title="Contact | Like What You See?"/>
             <p>Let's chat! </p>
-            <p>If you're interested in learning more about me and my work, drop me a line at emilymoschner@gmail.com.</p>
+            <p>If you're interested in learning more about me and my work, drop me a line at <a href="mailto:emilymoschner@gmail.com">
+    emilymoschner@gmail.com</a>.</p>
             <p>Of course, there's always social media too. Follow me:</p>
 
                 <h3><a href="http://www.bloglovin.com/blog/10616015/emily-ann-moschner" target="_blank">BLOGLOVIN'</a> &lozf; <a href="https://www.facebook.com/emoschner" target="_blank">FACEBOOK</a> &lozf; <a href="http://instagram.com/emilyannmoschner" target="_blank">INSTAGRAM</a> &lozf; <a href="http://www.linkedin.com/pub/emily-moschner/66/259/922" target="_blank">LINKEDIN</a> &lozf; <a href="http://www.pinterest.com/emilymoschner/boards/" target="_blank">PINTEREST</a> &lozf; <a href="https://twitter.com/EmilyMoschner" target="_blank">TWITTER</a></h3>
