Final Changes - Struggled with web responsiveness

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
                 <a href="portfolio.html">PORTFOLIO</a>
                 <a href="resume.html">RESUME</a>
                 <a href="http://emilyannmoschner.wordpress.com/" target="_blank">BLOG</a>
+                <a href="design.html">DESIGN Q & A</a>
                 <a href="contact.html">CONTACT</a>
             </nav>   
         </header>
