--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
                 <a href="portfolio.html">PORTFOLIO</a>
                 <a href="resume.html">RESUME</a>
                 <a href="http://emilyannmoschner.wordpress.com/" target="_blank">BLOG</a>
+                <a href="design.html">DESIGN Q & A</a>
                 <a href="contact.html">CONTACT</a>
             </nav>   
         </header>
@@ -26,13 +27,16 @@
 
             <p><em>Below are a few of my projects.</em></p>
     <div id="design">
-    <img src="img/portfolio_01.png" alt="Emily Ann Moschner Portfolio | Benjamin Jacob Rupe" title="Emily Ann Moschner Portfolio | Benjamin Jacob Rupe"/>
-    <p>Since his Kickstarter campaign in the fall of 2012, I have worked closely with <a href="http://benjaminjacobrupe.com/">Benjamin Jacob Rupe</a> and his team on visual branding.</p>
-            <p>The pieces sampled above include his Kickstarter promotional flier, Christmas tour 2012 flier, cover art for EP album and album release party flier.</p>
-            
-            <img src="img/portfolio_02.png" alt="Emily Ann Moschner Portfolio | Projects for Haiti, Inc." title="Emily Ann Moschner Portfolio | Projects for Haiti, Inc."/>
-            <p>As a marketing and communications intern with Gainesville nonprofit <a href="http://www.projectsforhaiti.org/">Projects for Haiti</a>, I have visually rebranded the organization.</p>
-            <p>Above is the new and improved Projects for Haiti logo.</p>
+        <img src="img/portfolio_01.png" alt="Emily Ann Moschner Portfolio | Benjamin Jacob Rupe" title="Emily Ann Moschner Portfolio | Benjamin Jacob Rupe"/>
+        <p>Since his Kickstarter campaign in the fall of 2012, I have worked closely with <a href="http://benjaminjacobrupe.com/">Benjamin Jacob Rupe</a> and his team on visual branding.</p>
+        <p>The pieces sampled above include his Kickstarter promotional flier, Christmas tour 2012 flier, cover art for EP album and album release party flier.</p>
+        <img src="img/portfolio_02.png" alt="Emily Ann Moschner Portfolio | Projects for Haiti, Inc." title="Emily Ann Moschner Portfolio | Projects for Haiti, Inc."/>
+        <p>As a marketing and communications intern with Gainesville nonprofit <a href="http://www.projectsforhaiti.org/">Projects for Haiti</a>, I have visually rebranded the organization.</p>
+        <p>Above is the new and improved Projects for Haiti logo.</p>
+        <img src="img/portfolio_03.png" alt="Emily Ann Moschner Portfolio | Unite Now: Worship" title="Emily Ann Moschner Portfolio | Unite Now: Worship"/>
+            <p>Unite Now is a campus organization at the University of Florida that works to unite all on-campus Christian organizations by hosting several events throughout the year.</p>
+            <p>In the fall of 2013 I was asked to create fliers suitable for both web and print to advertise the worship event.</p>
+        </div>
         </article>
     
         <footer>
