--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                 <a href="portfolio.html">PORTFOLIO</a>
                 <a href="resume.html">RESUME</a>
                 <a href="http://emilyannmoschner.wordpress.com/" target="_blank">BLOG</a>
+                <a href="design.html">DESIGN Q & A</a>
                 <a href="contact.html">CONTACT</a>
             </nav>   
      
