--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>About | Emily Ann Moschner Design</title>
+        <title>Contact | Emily Ann Moschner Design</title>
          <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="css/base.css"/>     
         <meta name="viewport" content="initial-scale=1.0, width=device-width" />
