--- a/design.html
+++ b/design.html
@@ -63,7 +63,7 @@ Why?</strong></em></p>
             
         <p>My favorite design tool would have to be the internet. I constantly use it to search for new ideas and inspirations. Several times a day I am browsing through this Pinterest-style website called Designpiration. With the Internet, I am able to instantly share and receive. And most importantly, I am able to make things interactive, which creates an immersive experience that engages the audience and makes them excited to look at the design.</p>
 
-        <p> P.S. In 2012, Justin interned with <a href="http://www.parisleaf.com/" target="_blank">Parisleaf</a>, a local design and printing firm in Gainesville, Florida. Not only is their work awesome, they've got a really earth-lovin' perspective on how their pieces could affect the environment. Watch this video to learn more about how they have committed to protecting the earth through eco-friendly printing. 
+        <p><strong>P.S. In 2012, Justin interned with <a href="http://www.parisleaf.com/" target="_blank">Parisleaf</a>, a local design and printing firm in Gainesville, Florida. Not only is their work awesome, they've got a really earth-lovin' perspective on how their pieces could affect the environment. Watch this video to learn more about how they have committed to protecting the earth through eco-friendly printing.</strong></p>
             <p><iframe src="//player.vimeo.com/video/68772295" width="420" height="315" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 
         </article>
